k8s/intermediate/nginx-ingress/nginx-ingress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-dep
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
        app.kubernetes.io/name: nginx-ingress
        #annotations:
        #prometheus.io/scrape: "true"
        #prometheus.io/port: "9113"
        #prometheus.io/scheme: http
    spec:
      serviceAccountName: nginx-ingress
      automountServiceAccountToken: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      #      volumes:
      #      - name: nginx-etc
      #        emptyDir: {}
      #      - name: nginx-cache
      #        emptyDir: {}
      #      - name: nginx-lib
      #        emptyDir: {}
      #      - name: nginx-log
      #        emptyDir: {}
      containers:
        - image: nginx/nginx-ingress:3.4.3-alpine
          imagePullPolicy: IfNotPresent
          name: nginx-ingress
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: readiness-port
              containerPort: 8081
            - name: prometheus
              containerPort: 9113
#          readinessProbe:
#            httpGet:
#              path: /nginx-ready
#              port: readiness-port
#            periodSeconds: 1
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            #limits:
            #  cpu: "1"
            #  memory: "1Gi"
          securityContext:
            allowPrivilegeEscalation: false
            #          readOnlyRootFilesystem: true
            runAsUser: 101 #nginx
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          #        volumeMounts:
          #        - mountPath: /etc/nginx
          #          name: nginx-etc
          #        - mountPath: /var/cache/nginx
          #          name: nginx-cache
          #        - mountPath: /var/lib/nginx
          #          name: nginx-lib
          #        - mountPath: /var/log/nginx
          #          name: nginx-log
          args:
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
            - -ingress-class=ngx-ink
            - -enable-custom-resources=false
            #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
            #- -include-year
            #- -enable-cert-manager
            #- -enable-external-dns
            #- -v=3 # Enables extensive logging. Useful for troubleshooting.
            #- -report-ingress-status
            #- -external-service=nginx-ingress
            #- -enable-prometheus-metrics
            #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
#      initContainers:
#      - image: nginx/nginx-ingress:3.4.3
#        imagePullPolicy: IfNotPresent
#        name: init-nginx-ingress
#        command: ['cp', '-vdR', '/etc/nginx/.', '/mnt/etc']
#        securityContext:
#          allowPrivilegeEscalation: false
#          readOnlyRootFilesystem: true
#          runAsUser: 101 #nginx
#          runAsNonRoot: true
#          capabilities:
#            drop:
#            - ALL
#        volumeMounts:
#        - mountPath: /mnt/etc
#          name: nginx-etc
