k8s/intermediate/nginx-ingress/ngx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ngx-dep
  name: ngx-dep
  namespace: nginx-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ngx-dep
  template:
    metadata:
      labels:
        app: ngx-dep
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: ngx-conf-vol
      volumes:
        - name: ngx-conf-vol
          configMap:
            name: ngx-conf
