k8s/intermediate/nginx-ingress/ngx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc
  namespace: nginx-ingress
  labels:
    app: ngx-svc

spec:
  type: NodePort
  selector:
    app: ngx-dep
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
