k8s/intermediate/nginx-ingress/ingress.yml
# kubectl create ing ngx-ing --class=ngx-ink --rule="ngx.test/=ngx-svc:80" --dry-run=client -oyaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngx-ing
  namespace: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;

spec:
  ingressClassName: ngx-ink
  rules:
    - host: ngx.test
      http:
        paths:
          - backend:
              service:
                name: ngx-svc
                port:
                  number: 8080
            path: /
            pathType: Exact
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngx-ink
  namespace: nginx-ingress
  # annotations:
  #   ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: nginx.org/ingress-controller
